Day 2 - Rock Paper Scissors!
